Bug 801961 - Make ion compile threads start lazily. r=luke